<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9E2E2">

    <EditText
        android:id="@+id/etn_Retirar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etn_Ingresar"
        android:autofillHints="" />

    <RadioGroup
        android:layout_width="230dp"
        android:layout_height="146dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_VerSaldo">

        <RadioButton
            android:id="@+id/rb_Ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accion"
            android:text="@string/ingresar_dinero"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb_Retirar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accion"
            android:text="Retirar Dinero"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_Salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accion"
            android:text="@string/salir"
            android:textColor="#616161"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etn_Ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_VerSaldo"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="procesar"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etn_Retirar" />

    <CheckBox
        android:id="@+id/cb_VerSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:onClick="accion"
        android:text="@string/ver_saldo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_VerSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:text="@string/tu_saldo_se_mostrara_aqu"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#F9E2E2"
        android:text="@string/bienvenido_al_banco"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>